--- a/src/register-org/components/check-your-answers/regulator-list/regulator-list.component.html
+++ b/src/register-org/components/check-your-answers/regulator-list/regulator-list.component.html
@@ -1,5 +1,18 @@
 <dl class="govuk-summary-list">
-  <div class="govuk-summary-list__row">
+  <div class="govuk-summary-list__row" [ngClass]="{'govuk-summary-list__row--no-border':hasIndividualRegulator}" 
+    *ngIf="regulatorType === regulatorTypeEnum.Individual">
+    <dt class="govuk-summary-list__key">Are you (as an individual) registered with a regulator?</dt>
+    <dd class="govuk-summary-list__value">
+      {{ hasIndividualRegulator ? 'Yes' : 'No'}}
+    </dd>
+    <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="javascript:void(0)"
+        routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/individual-registered-with-regulator">
+        Change<span class="govuk-visually-hidden">Individual regulator</span>
+      </a>
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row"  *ngIf="regulators?.length > 0">
     <dt class="govuk-summary-list__key">
       <span *ngIf="regulatorType === regulatorTypeEnum.Individual">
         What regulators are you (as an individual) registered with?
