--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -1,4 +1,4 @@
-<main id="content" class="govuk-main-wrapper govuk-!-margin-top-4" role="main" tabindex="-1">
+<main id="content" class="govuk-main-wrapper govuk-!-margin-top-4" role="main" tabindex="-1" #mainContent>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
@@ -237,9 +237,9 @@
         </strong>
       </div>
 
-      <div class="govuk-body govuk-!-margin-top-6" [ngClass]="{'govuk-form-group--error': validationErrors.length>0}">
+      <div class="govuk-body govuk-!-margin-top-6" [ngClass]="{'govuk-form-group--error': validationErrors.length>0 && !cyaFormGroup.valid}">
         <form [formGroup]="cyaFormGroup">
-          <div *ngIf="validationErrors.length>0" class="govuk-error-message">
+          <div *ngIf="validationErrors.length>0 && !cyaFormGroup.valid" class="govuk-error-message">
             <span class="govuk-visually-hidden">Error:</span> {{validationErrors[0].message}}
           </div>
           <div class="govuk-checkboxes__item">
