--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -252,10 +252,10 @@
                 and are eligible for an account to manage your organisation and cases
               </label>
           </div>
-          <div class="govuk-!-margin-top-6">
+          <div class="govuk-button-group">
             <button class="govuk-button govuk-buton--primary" (click)="onSubmitData()" type="button">Confirm and submit</button>
+            <a class="govuk-link" href="javascript:void(0)" (click)="onCancel()">Cancel</a>
           </div>
-          <a class="govuk-link" href="javascript:void(0)" (click)="onCancel()">Cancel</a>
         </form>
       </div>
     </div>
