--- a/src/register-org/components/company-house-details/company-house-details.component.html
+++ b/src/register-org/components/company-house-details/company-house-details.component.html
@@ -31,7 +31,7 @@
             This helps HMCTS to verify your company on our System
           </div>
           <p class="govuk-error-message" *ngIf="companyNumberError">
-            <span class="govuk-visually-hidden">Error:</span> {{ companyNumberError.description }}
+            <span class="govuk-visually-hidden">Error:</span> {{ companyNumberError.message }}
           </p>
           <input class="govuk-input" id="company-house-number" name="companyHouseNumber" type="text"
             formControlName="companyHouseNumber" aria-describedby="company-house-number-hint">
