EUI-8969: MyHMCTS Terms and Conditions changes
Update with latest MyHMCTS Terms and Conditions wording; minor change to agreement checkbox wording on Check Your Answers page.

--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -246,7 +246,7 @@
               <input class="govuk-checkboxes__input" type="checkbox" id="confirm-terms-and-conditions"
               name="confirmTermsAndConditions" formControlName="confirmTermsAndConditions">
               <label class="govuk-label govuk-checkboxes__label" for="confirm-terms-and-conditions">
-                You have read and understood the
+                You have read, understood and will abide by the
                 <a href="javascript:void(0)" target="_blank"
                   routerLink="/terms-and-conditions">terms and conditions</a>
                 and are eligible for an account to manage your organisation and cases
