EUI-8961 ROO Companies house page corrections

--- a/src/register-org/components/company-house-details/company-house-details.component.html
+++ b/src/register-org/components/company-house-details/company-house-details.component.html
@@ -28,7 +28,7 @@
             Enter the 8-digit Companies House Number (optional)
           </label>
           <div id="company-house-number-hint" class="govuk-hint">
-            This helps HMCTS to verify your organisation on our System
+            This helps HMCTS to verify your organisation on our system
           </div>
           <p class="govuk-error-message" *ngIf="companyNumberError">
             <span class="govuk-visually-hidden">Error:</span> {{ companyNumberError.message }}
