EUI-8969: MyHMCTS Terms and Conditions changes
Add direct link to section on web scraping.

--- a/src/app/components/terms-and-conditions-register-other-org/terms-and-conditions-register-other-org.component.html
+++ b/src/app/components/terms-and-conditions-register-other-org/terms-and-conditions-register-other-org.component.html
@@ -37,6 +37,8 @@
               must keep your account details safe.</a></li>
           <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#materials-on-our-site">How
               you may use material on our site.</a></li>
+          <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#web-scraping">No text or
+              data mining, or web scraping.</a></li>
           <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#information-on-this-site">Do
               not rely on information on our site.</a></li>
           <li><a class="govuk-link" href="{{TERMS_AND_CONDITIONS_REGISTER_OTHER_ORG_ROUTE}}#websites-we-link-to">We are
