--- a/src/register-org/components/individual-registered-with-regulator/individual-registered-with-regulator.component.html
+++ b/src/register-org/components/individual-registered-with-regulator/individual-registered-with-regulator.component.html
@@ -4,39 +4,34 @@
       <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
       <xuilib-hmcts-error-summary [errorMessages]="validationErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
       <span class="govuk-caption-xl">Register an organisation</span>
+      <h1 class="govuk-heading-xl">
+        Are you (as an individual) registered with a regulator?
+      </h1>
+      <hr>
       <form [formGroup]="registeredWithRegulatorFormGroup">
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
-                Are you (as an individual) registered with a regulator?
-              </h1>
-            </legend>
-            <hr>
-            <div [ngClass]="{'govuk-form-group--error': validationErrors.length}">
-              <div *ngIf="validationErrors.length" class="govuk-error-message">
-                <span class="govuk-visually-hidden">Error:</span> Please select an option
+          <div [ngClass]="{'govuk-form-group--error': validationErrors.length}">
+            <div *ngIf="validationErrors.length" class="govuk-error-message">
+              <span class="govuk-visually-hidden">Error:</span> Please select an option
+            </div>
+            <div class="govuk-radios" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" type="radio" value="yes"
+                  id="registered-with-regulator-yes" name="registeredWithRegulator" formControlName="registeredWithRegulator">
+                <label class="govuk-label govuk-radios__label" for="registered-with-regulator-yes">
+                  Yes
+                </label>
               </div>
-              <div class="govuk-radios" data-module="govuk-radios">
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" type="radio" value="yes"
-                    id="registered-with-regulator-yes" name="registeredWithRegulator" formControlName="registeredWithRegulator">
-                  <label class="govuk-label govuk-radios__label" for="registered-with-regulator-yes">
-                    Yes
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" type="radio" value="no"
-                    id="registered-with-regulator-no" name="registeredWithRegulator" formControlName="registeredWithRegulator">
-                  <label class="govuk-label govuk-radios__label" for="registered-with-regulator-no">
-                    No
-                  </label>
-                </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" type="radio" value="no"
+                  id="registered-with-regulator-no" name="registeredWithRegulator" formControlName="registeredWithRegulator">
+                <label class="govuk-label govuk-radios__label" for="registered-with-regulator-no">
+                  No
+                </label>
               </div>
             </div>
-          </fieldset>
+          </div>
         </div>
-
         <div class="govuk-button-group">
           <button class="govuk-button govuk-button--primary" data-module="govuk-button" (click)="onContinue()">
             Continue
