--- a/src/register-org/components/organisation-services-access/organisation-services-access.component.html
+++ b/src/register-org/components/organisation-services-access/organisation-services-access.component.html
@@ -7,12 +7,12 @@
       <form [formGroup]="servicesFormGroup">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
+            <legend>
+              <h1 class="govuk-heading-xl">
                 Which services will your organisation need to access?
               </h1>
             </legend>
-            <hr>
+            <hr class="govuk-!-margin-top-0">
             <div class="govuk-label govuk-!-font-weight-bold">
               Select services to access
             </div>
