--- a/src/register-org/components/payment-by-account/payment-by-account.component.html
+++ b/src/register-org/components/payment-by-account/payment-by-account.component.html
@@ -4,41 +4,37 @@
       <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
       <xuilib-hmcts-error-summary [errorMessages]="validationErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
       <span class="govuk-caption-xl">Register an organisation</span>
+      <h1 class="govuk-heading-xl">
+        Does your organisation have a payment by account number?
+      </h1>
+      <hr>
       <form [formGroup]="pbaFormGroup">
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
-                Does your organisation have a payment by account number?
-              </h1>
-            </legend>
-            <hr>
-            <div id="pba-hint" class="govuk-hint govuk-!-margin-top-4">
-              Payment by account (PBA) is a credit service for organisations who frequently bring proceedings to HMCTS.
-              It enables monthly invoicing for court fees.
+          <div id="pba-hint" class="govuk-hint govuk-!-margin-top-4">
+            Payment by account (PBA) is a credit service for organisations who frequently bring proceedings to HMCTS.
+            It enables monthly invoicing for court fees.
+          </div>
+          <div [ngClass]="{'govuk-form-group--error': validationErrors.length}">
+            <div *ngIf="validationErrors.length" class="govuk-error-message">
+              <span class="govuk-visually-hidden">Error:</span> Please select an option
             </div>
-            <div [ngClass]="{'govuk-form-group--error': validationErrors.length}">
-              <div *ngIf="validationErrors.length" class="govuk-error-message">
-                <span class="govuk-visually-hidden">Error:</span> Please select an option
+            <div class="govuk-radios" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" type="radio" value="yes"
+                  id="pba-yes" name="pba" formControlName="pba">
+                <label class="govuk-label govuk-radios__label" for="pba-yes">
+                  Yes
+                </label>
               </div>
-              <div class="govuk-radios" data-module="govuk-radios">
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" type="radio" value="yes"
-                    id="pba-yes" name="pba" formControlName="pba">
-                  <label class="govuk-label govuk-radios__label" for="pba-yes">
-                    Yes
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" type="radio" value="no"
-                    id="pba-no" name="pba" formControlName="pba">
-                  <label class="govuk-label govuk-radios__label" for="pba-no">
-                    No
-                  </label>
-                </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" type="radio" value="no"
+                  id="pba-no" name="pba" formControlName="pba">
+                <label class="govuk-label govuk-radios__label" for="pba-no">
+                  No
+                </label>
               </div>
             </div>
-          </fieldset>
+          </div>
         </div>
         <div class="govuk-button-group">
           <button class="govuk-button govuk-button--primary" data-module="govuk-button" (click)="onContinue()">
