--- a/src/register-org/components/registration-submitted/registration-submitted.component.html
+++ b/src/register-org/components/registration-submitted/registration-submitted.component.html
@@ -4,7 +4,7 @@
       <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-            Registration details subimitted
+            Registration details submitted
           </h1>
         </div>
         <h2 class="govuk-heading-m">What happens next</h2>
