EUI-8925 ROO Minor corrections on several pages

--- a/src/register-org/components/organisation-services-access/organisation-services-access.component.html
+++ b/src/register-org/components/organisation-services-access/organisation-services-access.component.html
@@ -7,10 +7,8 @@
       <form [formGroup]="servicesFormGroup">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-            <legend>
-              <h1 class="govuk-heading-xl">
-                Which services will your organisation need to access?
-              </h1>
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl govuk-!-margin-bottom-8">
+              Which services will your organisation need to access?
             </legend>
             <hr class="govuk-!-margin-top-0">
             <div class="govuk-label govuk-!-font-weight-bold">
