--- a/src/register-org/components/regulator-details/regulator-details.component.html
+++ b/src/register-org/components/regulator-details/regulator-details.component.html
@@ -5,15 +5,13 @@
       <xuilib-hmcts-error-summary [errorMessages]="validationErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
       <span class="govuk-caption-xl">Register an organisation</span>
       <fieldset class="govuk-fieldset">
-        <legend>
-          <h1 class="govuk-heading-xl">
-            <span *ngIf="regulatorType === regulatorTypeEnum.Individual">
-              What regulator are you (as an individual) registered with?
-            </span>
-            <span *ngIf="regulatorType === regulatorTypeEnum.Organisation">
-              Who is your organisation registered with?
-            </span>
-          </h1>
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl govuk-!-margin-bottom-8">
+          <span *ngIf="regulatorType === regulatorTypeEnum.Individual">
+            What regulator are you (as an individual) registered with?
+          </span>
+          <span *ngIf="regulatorType === regulatorTypeEnum.Organisation">
+            Who is your organisation registered with?
+          </span>
         </legend>
         <hr class="govuk-!-margin-top-0">
         <div class="govuk-body govuk-!-margin-top-6">
