--- a/src/register-org/components/organisation-services-access/organisation-services-access.component.html
+++ b/src/register-org/components/organisation-services-access/organisation-services-access.component.html
@@ -6,12 +6,12 @@
       <span class="govuk-caption-xl">Register an organisation</span>
       <form [formGroup]="servicesFormGroup">
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
+          <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl govuk-!-margin-bottom-8">
               Which services will your organisation need to access?
             </legend>
             <hr class="govuk-!-margin-top-0">
-            <div class="govuk-label govuk-!-font-weight-bold">
+            <div class="govuk-label govuk-!-font-weight-bold govuk-!-margin-top-4">
               Please indicate the services you are looking to access
             </div>
             <div class="govuk-hint">
