--- a/src/register-org/components/company-house-details/company-house-details.component.html
+++ b/src/register-org/components/company-house-details/company-house-details.component.html
@@ -6,8 +6,7 @@
       <span class="govuk-caption-xl">Register an organisation</span>
       <h1 class="govuk-heading-xl">What is your organisation name and Companies House number?</h1>
       <hr>
-      <p class="govuk-hint">
-        If your organisation is registered with Companies House,
+      <p class="govuk-hint">If your organisation is registered with Companies House,
         add the organisation name and Companies House number as they appear in the
         <a class="govuk-link" href="https://www.gov.uk/get-information-about-a-company" target="_blank">company
           information register</a>
