--- a/src/register-org/components/individual-registered-with-regulator/individual-registered-with-regulator.component.html
+++ b/src/register-org/components/individual-registered-with-regulator/individual-registered-with-regulator.component.html
@@ -6,12 +6,12 @@
       <span class="govuk-caption-xl">Register an organisation</span>
       <form [formGroup]="registeredWithRegulatorFormGroup">
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
+          <fieldset class="govuk-fieldset" aria-describedby="registered-regulators">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl govuk-!-margin-bottom-8">
               Are you (as an individual) registered with a regulator?
             </legend>
             <hr class="govuk-!-margin-top-0">
-            <div class=" govuk-!-margin-top-4" [ngClass]="{'govuk-form-group--error': validationErrors.length}">
+            <div id="registered-regulators" class=" govuk-!-margin-top-4" [ngClass]="{'govuk-form-group--error': validationErrors.length}">
               <div *ngIf="validationErrors.length" class="govuk-error-message">
                 <span class="govuk-visually-hidden">Error:</span> Please select an option
               </div>
