--- a/src/register-org/components/payment-by-account/payment-by-account.component.html
+++ b/src/register-org/components/payment-by-account/payment-by-account.component.html
@@ -6,7 +6,7 @@
       <span class="govuk-caption-xl">Register an organisation</span>
       <form [formGroup]="pbaFormGroup">
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
+          <fieldset class="govuk-fieldset" aria-describedby="pba-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl govuk-!-margin-bottom-8">
               Does your organisation have a payment by account number?
             </legend>
