EUI-8989: Minor amendments to display text
Remove unnecessary paragraph indentation and add missing full stops.

--- a/src/register-org/components/company-house-details/company-house-details.component.html
+++ b/src/register-org/components/company-house-details/company-house-details.component.html
@@ -9,7 +9,7 @@
       <p class="govuk-hint">If your organisation is registered with Companies House,
         add the organisation name and Companies House number as they appear in the
         <a class="govuk-link" href="https://www.gov.uk/get-information-about-a-company" target="_blank">company
-          information register</a>
+          information register</a>.
       </p>
       <form [formGroup]="companyHouseFormGroup">
         <div class="govuk-form-group" #companyName [ngClass]="{'govuk-form-group--error': companyNameError}">
