--- a/src/register-org/components/organisation-services-access/organisation-services-access.component.html
+++ b/src/register-org/components/organisation-services-access/organisation-services-access.component.html
@@ -15,7 +15,7 @@
               Please indicate the services you are looking to access
             </div>
             <div class="govuk-hint" id="service-selection-hint">
-              You must select at least one option. This will not impact access to any of the services listed as long as you're eligible to do so
+              You must select at least one option. This will not impact access to any of the services listed as long as you're eligible to do so.
             </div>
             <div [ngClass]="{'govuk-form-group--error': noServicesError}">
               <div *ngIf="noServicesError" class="govuk-error-message">
