--- a/src/register-org/components/before-you-start/before-you-start.component.html
+++ b/src/register-org/components/before-you-start/before-you-start.component.html
@@ -7,11 +7,11 @@
       </h1>
       <hr>
       <br>
-      <p class="govuk-body">
-        MyHMCTS is a service for submitting and managing applications. It can be used by organisations and legal professionals.
+      <p class="govuk-body">MyHMCTS is a service for submitting and managing applications.
+        It can be used by organisations and legal professionals.
       </p>
-      <p class="govuk-body">
-        If you are not sure if your organisation will be able to use this service, see the <a class="govuk-link" href="https://www.gov.uk/guidance/register-for-myhmcts-online-case-management-for-legal-professionals" target="_blank">MyHMCTS guidance on GOV.UK</a>.
+      <p class="govuk-body">If you are not sure if your organisation will be able to use this service, see the
+        <a class="govuk-link" href="https://www.gov.uk/guidance/register-for-myhmcts-online-case-management-for-legal-professionals" target="_blank">MyHMCTS guidance on GOV.UK</a>.
       </p>
       <div class="govuk-body">
         <p>By registering, you will:</p>
@@ -21,17 +21,16 @@
         </ul>
       </div>
       <h3 class="govuk-heading-m">Before you start</h3>
-      <p class="govuk-body">
-        MyHMCTS is a service for organisations and legal professionals. Do not use this service if you are a member of the public making an application on your own behalf.
+      <p class="govuk-body">MyHMCTS is a service for organisations and legal professionals.
+        Do not use this service if you are a member of the public making an application on your own behalf.
       </p>
-      <p class="govuk-body">
-        Make sure the information you give us is complete and accurate. If there are any errors in the application, HMCTS will reject it and you will need to start again.
+      <p class="govuk-body">Make sure the information you give us is complete and accurate.
+        If there are any errors in the application, HMCTS will reject it and you will need to start again.
       </p>
-      <p class="govuk-body">
-        Check if your organisation already has an account. If so, ask your organisation's MyHMCTS administrator to give you access.
+      <p class="govuk-body">Check if your organisation already has an account.
+        If so, ask your organisation's MyHMCTS administrator to give you access.
       </p>
-      <p class="govuk-body">
-        Do not create an additional account for your organisation unless you need to keep parts of your business separate.
+      <p class="govuk-body">Do not create an additional account for your organisation unless you need to keep parts of your business separate.
       </p>
       <div class="govuk-body">
         <p>You will not be able to:</p>
