Feature/register other org sprint 31.6 -  EXUI_MO_3.0.64 (#1191)
* EUI-8797 Register other org - CYA display amendments

* EUI-8797 Register other org - CYA display amendments

* EUI-8797 Register other org - CYA display amendments

* EUI-8797 Register other org - CYA display amendments

* EUI-8797 Register other org - CYA display amendments

* EUI-8797 Register other org - CYA display amendments

* EUI-8797 Register other org - CYA display amendments

* EUI-8797 Register other org - CYA display amendments

* register other org workflow pages a11y tests added (#1103)

* register other org workflow pages a11y tests added

* a11y test name update

* Add test fixes

* Temporary fix for back link

* postcode validator

* EUI-8821 Register Other Org - Service not listed

* Update organisation types value

* fix typos

* EUI-8821 Register Other Org - Service not listed

* Update document-exchange-reference.component.ts

* Update yarn-audit-known-issues

* Update yarn-audit-known-issues

* Merge from base branch

* EUI-8821 Register Other Org - Service not listed

* EUI-8797 Register other org - CYA display amendments

* EUI-8838 Register Other Other - Back link not working

* Create renovate.json

* Create renovate.json

* Create renovate.json

* EUI-8838 Register Other Other - Back link not working

* Update organisation-services-access.component.spec.ts

* EUI-8838 Register Other Other - Back link not working

* EUI-8838 Register Other Other - Back link not working

* Update organisation-services-access.component.ts

* EUI-8838 Register Other Other - Back link not working

* fix the 7 digit PBA

* Call Lov API for org type

* initialise PBA

* pba fix

* EUI-8838 Register Other Other - Back link not working

* Update organisation-services-access.component.ts

* Update regulator-details.component.spec.ts

* Update organisation-services-access.component.spec.ts

* pba

* Add value to pre

--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -3,7 +3,7 @@
     <div class="govuk-grid-column-two-thirds">
       <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
       <xuilib-hmcts-error-summary [errorMessages]="validationErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
-      <h1 class="govuk-heading-l">Check your answers before you register</h1>
+      <h1 class="govuk-heading-xl">Check your answers before you register</h1>
       <h2 class="govuk-heading-m govuk-!-margin-top-8">Organisation details</h2>
 
       <div *ngIf="registrationData.otherOrganisationType">
@@ -246,7 +246,7 @@
               <input class="govuk-checkboxes__input" type="checkbox" id="confirm-terms-and-conditions"
               name="confirmTermsAndConditions" formControlName="confirmTermsAndConditions">
               <label class="govuk-label govuk-checkboxes__label" for="confirm-terms-and-conditions">
-                You have read and understood the
+                You have read, understood and will abide by the
                 <a href="javascript:void(0)" target="_blank"
                   routerLink="/terms-and-conditions">terms and conditions</a>
                 and are eligible for an account to manage your organisation and cases
