Add other organisation type

--- a/src/organisation/containers/organisation/organisation.component.html
+++ b/src/organisation/containers/organisation/organisation.component.html
@@ -46,7 +46,7 @@
     <dl id="organisation-type" class="govuk-summary-list" *ngIf="organisationType">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Organisation type</dt>
-        <dd class="govuk-summary-list__value">{{organisationType}}</dd>
+        <dd class="govuk-summary-list__value">{{orgTypeDescription}}</dd>
       </div>
     </dl>
 
