--- a/src/users/containers/users/users.component.html
+++ b/src/users/containers/users/users.component.html
@@ -5,15 +5,14 @@
            <h1 class="hmcts-page-heading__title govuk-heading-xl">Users</h1>
         </div>
         <div class="hmcts-page-heading__actions-wrapper">
-           <a (click)="inviteNewUser()" role="button" draggable="false" class="govuk-button hmcts-page-heading__button">
+           <a (click)="inviteNewUser()" role="button" draggable="false" class="govuk-button hmcts-page-heading__button" [class.invite-float-right]="searchFiltersEnabled$ | async">
            Invite user
            </a>
+           <app-search-filter-users *ngIf="searchFiltersEnabled$ | async" [usersList]="tableUsersData$ | async" (filterValues)="handleFilterUpdates($event)"></app-search-filter-users>
         </div>
      </div>
      <div class="table-right_margin">
-      <xuilib-user-list *ngIf="(!(isLoading$ | async) && pageTotalSize) else isLoading" [users]="tableUsersData$ | async"
-      (pageChange)="pageChange($event)" [currentPageNumber]="currentPageNumber" [pageTotalSize]="pageTotalSize">
-      </xuilib-user-list>
+      <app-prd-users-table *ngIf="(!(isLoading$ | async)) else isLoading" [users]="tableUsersData$ | async" [filterValues]="filterValues"></app-prd-users-table>
      </div>
      <ng-template #isLoading>
         <div>Loading...</div>
